MUMUP-2260 : fix header height on mobile

--- a/src/main/webapp/css/buckyless/header.less
+++ b/src/main/webapp/css/buckyless/header.less
@@ -38,7 +38,7 @@ a#myuw-header img {
   color:#1a0000;
 }
 .navbar-default {
-  height:50px !important;
+  height:52px !important;
 }
 .container-fluid {
   height:inherit;
@@ -158,6 +158,11 @@ a#myuw-header img {
 .header-mobile {
   display:inline-block;
 }
+
+.navbar-header {
+  height: 52px;
+}
+
 .navbar-header .search-mobile-icon .fa-search {
   float:right;
   font-size:1.7em;
@@ -173,7 +178,7 @@ a#myuw-header img {
   position: absolute;
   top: 0;
   right: 0;
-  height: 50px;
+  height: 52px;
 }
 
 portal-header a.logout-link .fa {
